--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 
 h1,
@@ -50,3 +51,49 @@ a {
 /* button:focus {
     outline: 10px solid var(--color-blue);
 } */
+
+/* Header*/
+.header {
+    background-color: black; /* 영역 구분 확인 어려울 시 배경색 지정 */
+    position: fixed;
+    top: 0; /* 상단 위치에 고정 */
+    width: 100%; /* 위 가로줄 전체 크기 잡기 */
+    padding: 1rem; /* 로고 왼쪽 내부 여백 설정 */
+    display: flex; /* 로고와 nav 나란히 배치할 Flex Box 생성 */
+    justify-content: space-between; /* 양 옆(수평) 나란히 배치 */
+    align-items: center; /* 아이템 영역 수직 중앙 정렬 */
+
+}
+
+.header__logo {
+    display: flex; /* 로고와 nav 요소 수평 정렬 */
+    align-items: center; /* 수직 정렬 */
+    gap: 8px; /* 이미지와 로고 간격 설정 */
+}
+
+.header__logo__img { /* 웹브라우저 성능을 위해선 별도의 클래스명 지정 */
+    width: 36px;
+    height: 36px;
+}
+
+.header__logo__title {
+    font-size: 1.8rem; /* rem : 상대적인 unit */
+}
+
+.header__menu {
+    display: flex; /* nav 요소 나란히 한줄에 정렬 */
+    gap: 4px; /* 요소 사이 간격 설정 */
+}
+
+.header__menu__item {
+    padding: 8px 16px; /* 패딩 상하, 좌우 여백 설정 */ 
+}
+
+.header__menu__item:hover {
+    border-bottom: 1px solid var(--color-accent); /* 호버 시 밑줄 효과 */
+}
+
+.header__menu__item.active {
+    border : 1px solid var(--color-accent); /* 첫 번째 요소 active box 생성 */
+    border-radius: 4px; 
+}
