--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,50 @@ a {
     border : 1px solid var(--color-accent); /* 첫 번째 요소 active box 생성 */
     border-radius: 4px; 
 }
+/* Home */
+#home {
+    background-color: var(--color-primary);
+    color: var(--color-text);
+    padding: 5rem 1rem; /* 상하, 좌우 */
+    padding-top: 7rem; /* 프로필 이미지와 title 사이 간격 여백 */
+    text-align: center;
+}
+
+.home__avatar {
+    width: 250px;
+    height: 250px;
+    object-fit: cover; /* 원본 이미지 비율 유지 */
+    border-radius: 100%;
+    border: 3px solid var(--color-accent);
+}
+
+.home__title {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.home__title__strong {
+    color: var(--color-accent);
+}
+
+.home__description {
+    font-size: 1.3rem;
+    margin-bottom: .3rem;
+}
+
+.home__contact {
+    display: inline-block;
+    background-color: var(--color-accent);
+    color: var(--color-black);
+    margin: 2rem;
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+.home__contact:hover {
+    background-color: transparent;
+    color: var(--color-text);
+    outline: 2px solid var(--color-accent); /* 테두리 적용 시 컨텐츠 사이즈 영향을 미치지 않기 위해 */
+
+}
