--- a/css/style.css
+++ b/css/style.css
@@ -228,3 +228,46 @@ a {
     height: 50px;
     object-fit: cover; /*원본 이미지 비율 유지*/
 }
+
+/* Skills */
+#skills {
+    background-color: var(--color-primary-variant);
+    color: var(--color-text);
+}
+
+.skills {
+    display: grid;
+    grid-template-columns: 6fr 4fr; /* 6배, 4배 적용 */
+    margin: 2rem 3rem;
+    border-radius: 8px;
+    overflow: hidden; /* 컨테이너 외 벗어날 시 숨기기 */
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 
+    0 12.5px 10px rgba(0, 0, 0, 0.06), 
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086), 
+    0 100px 80px rgba(0, 0, 0, 0.12)
+}
+
+.skills__title {
+    color: var(--color-accent);
+    margin: 1rem 0;
+    font-size: 1.2rem;
+}
+
+.skills__coding {
+    grid-row: span 2; /* 2줄 적용*/
+    padding: 1rem;
+    background-color: var(--color-primary);
+}
+
+.skills__tools {
+    padding: 1rem;
+
+}
+
+.skills__etc {
+    padding: 1rem;
+    background-color: var(--color-primary);
+    filter: brightness(150%); /* 배경색상을 좀 더 연하게 설정 */
+} 
