--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,6 @@ a {
 
 .skills__tools {
     padding: 1rem;
-
 }
 
 .skills__etc {
@@ -271,3 +270,26 @@ a {
     background-color: var(--color-primary);
     filter: brightness(150%); /* 배경색상을 좀 더 연하게 설정 */
 } 
+
+.bar {
+    display: flex;
+    flex-direction: column; /* Flex Box 수직으로 정렬 */
+    padding: 1rem;
+    gap: .5rem;
+}
+
+.bar__metadata {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bar__bg {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-primary-variant);
+}
+
+.bar__value {
+    height: 3px;
+    background-color: var(--color-accent);
+}
