--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,16 @@ a {
     box-shadow: 4.0px 8.0px 8.0px rgba(0,0,0,0.38); /* box shadow 적용 */
 }
 
+.major__tools { /* 협업툴 크기 조절 위해 따로 클래스명 지정 */
+    width: 25rem;
+    background-color: var(--color-primary-variant);
+    padding: 2rem 1rem;
+    color: var(--color-text);
+    border-radius: 1rem;
+    cursor: default; /* 텍스트 커서 제거 */
+    box-shadow: 4.0px 8.0px 8.0px rgba(0,0,0,0.38); /* box shadow 적용 */
+}
+
 .major__icon {
     font-size: 4rem; /* icon 크기 설정 */
     margin: 1rem 0;
@@ -386,4 +396,72 @@ a {
 
 .contact__link:hover {
     color: var(--color-accent);
+}
+
+@media screen and (max-width: 768px) {
+    .section {
+        padding: 3rem 2rem;
+    }
+    
+    .title {
+        font-size: 2rem;
+    }
+    
+    .description {
+        font-size: 1rem;
+    }
+
+    .header {
+        flex-direction: column; /* 로고와 메뉴 수직 정렬 */
+        align-items: start; /* 왼쪽으로 정렬 */
+    }    
+
+    .header__menu {
+        flex-direction: column; /* nav 요소 수직 정렬 */
+        text-align: center;
+        padding: 1rem 4rem;
+        gap: 1rem;
+    }
+
+    .header__nav {
+        width: 100%;
+    }
+
+    #home {
+        padding-bottom: 3.2rem; /* 헤더 밑 여백 줄이기 */
+    }
+    
+    .home__title {
+        font-size: 2.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .majors {
+        flex-direction: column; /* 수직으로 하나씩 배열 */
+        align-items: center;
+    }
+
+    .major {
+       max-width: 25rem; 
+    }
+
+    .job {
+        justify-content: center;
+    }
+
+    .skills {
+        grid-template-columns: 1fr; /* 그리드 수직 배열 */
+    }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .arrow-up {
+        font-size: 2rem;
+        width: 3rem;
+        height: 3rem;
+        bottom: 1.5rem;
+        right: 1.5rem;
+    }
 }
