--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,7 @@ a {
     border-radius: 100%;
     text-align: center;
     box-shadow: 5px 5px 0px 0px var(--color-accent);
+    transition: opacity 300ms ease-in; /* 서서히 화살표 버튼 나오도록 효과 적용 */
 }
 
 /* Footer */
