--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth; /* 스크롤 자연스런 효과*/
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
