--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
     --color-accent-variant: var(--color-orange); /* 강조색상 변형된 표현 */
     --color-text: var(--color-white); /* 텍스트 색상 */
 
+
+    /*  Background */
+    --home-bg-gradient: linear-gradient(
+        180deg, 
+        rgba(101,26,169,1) 0%, 
+        rgba(44,36,36,1) 100%
+    );
+
     /* Colors */
     --color-white: #ffffff;
     --color-black: #050a13;
@@ -16,7 +24,13 @@
 
     /* Size */
     --size-max-width : 1200px;
+
+    /* Divider */
+    --divider-sing-wave: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none"> <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"></path> </svg>');
+    --divider-tilt: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none"> <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z"></path> </svg>');
+    --divider-arrow: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none"> <path d="M649.97 0L550.03 0 599.91 54.12 649.97 0z"></path> </svg>');
 }
+
 
 * {
     box-sizing: border-box;
@@ -144,11 +158,30 @@ button:focus {
 }
 /* Home */
 #home {
+    position: relative;
     background-color: var(--color-primary);
+    background: rgb(101,26,169);
+    background: var(--home-bg-gradient);
     color: var(--color-text);
     padding: 5rem 1rem; /* 상하, 좌우 */
     padding-top: 7rem; /* 프로필 이미지와 title 사이 간격 여백 */
     text-align: center;
+}
+
+/* Home 헤더 디자인 스타일 */
+#home::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: calc(128% + 1.3px);
+    height: 147px;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    background-color: var(--color-white);
+    mask: var(--divider-sing-wave);  /* CSS에서 가상 효과 변수 추가 */
+    -webkit-mask: var(--divider-sing-wave);  /* CSS에서 가상 효과 변수 추가 */
 }
 
 .home__avatar {
@@ -262,8 +295,25 @@ button:focus {
 
 /* Skills */
 #skills {
+    position: relative; /* ::after 요소 위치가 절대적이므로 부모 기준점을 상대 위치로 설정 */
     background-color: var(--color-primary-variant);
     color: var(--color-text);
+}
+
+/* Skills 헤더 디자인 스타일 */ 
+#skills::after {
+    content: ''; /* after 가상 요소 쓸 시 한셋트(컨텐츠 내용 공백) */
+    position: absolute; /* 위치가 절대적이므로 부모 요소를 상대적으로 설정 */
+    top: 0;
+    left: 0;
+    width: calc(100% + 1.3px);
+    height: 46px;
+    transform: rotateY(180deg);
+    overflow: hidden;
+    line-height: 0;
+    background-color: var(--color-white);
+    mask: var(--divider-tilt);
+    -webkit-mask: var(--divider-tilt);
 }
 
 .skills {
@@ -327,8 +377,8 @@ button:focus {
 
 /* Work */
 #work {
-    background-color: var(--color-primary);
-    color: var(--color-text);
+    background-color: var(--color-white); 
+    /* /* color: var(--color-text); */
 }
 
 .projects {
@@ -399,9 +449,26 @@ button:focus {
 
 /* Footer */
 #contact {
+    position: relative;
     background-color: var(--color-primary);
     color: var(--color-text);
 }
+
+/* contact 헤더 디자인 스타일  */
+#contact::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: calc(100% + 1.3px);
+    height: 46px;
+    overflow: hidden;
+    line-height: 0;
+    background-color: var(--color-white);
+    mask: var(--divider-arrow);
+    -webkit-mask: var(--divider-arrow);
+}
+
 
 .contact__links {
     display: flex;
