--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
     --color-blue: #03e8f9;
     --color-orange: #fd6413;
     --color-gray: #1b1e26;
+    --color-green: #D6FF43;
+    --color-yellow: #FFBF3C;
+    --color-pink: #FE6D79;
+    --color-purple: #A649FC;
 
     /* Size */
     --size-max-width : 1200px;
