--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,10 @@ button:focus {
     transform: rotate(-15deg) scale(1.2); /* icon 호버 시 -15도 기울이기 및 확대 효과 적용*/
 }
 
+.major__tools:hover .major__icon { /* Communication-Tools 애니 별도 적용 */
+    transform: rotate(-15deg) scale(1.2); 
+}
+
 .jobs {
     text-align: start;
 }
