--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,7 @@ button:focus {
     grid-template-columns: repeat(3, 1fr); /* 1배율로 4개의 컬럼 생성 */
     grid-template-rows: repeat(2, 1fr); /* 2줄의 행 생성 */
     gap: 1rem;
+    margin-top:1.5rem;
 }
 
 .project {
