--- a/css/style.css
+++ b/css/style.css
@@ -405,9 +405,10 @@ button:focus {
 .projects {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 1배율로 4개의 컬럼 생성 */
-    grid-template-rows: repeat(2, 1fr); /* 2줄의 행 생성 */
+    /* grid-template-rows: repeat(2, 1fr); 2줄의 행 생성 */
     gap: 1rem;
     margin-top:1.5rem;
+    margin-bottom: 4rem;
 }
 
 .project {
@@ -418,6 +419,8 @@ button:focus {
 
 .project__img {
     width: 100%;
+    height: 100%;
+
 }
 
 .project__metadata {
