--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@
     --divider-sing-wave: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none"> <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"></path> </svg>');
     --divider-tilt: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none"> <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z"></path> </svg>');
     --divider-arrow: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none"> <path d="M649.97 0L550.03 0 599.91 54.12 649.97 0z"></path> </svg>');
+
+
 }
 
 
@@ -58,6 +60,7 @@ body {
     margin: 0;
     overflow-x: hidden; /* 가로 스크롤 제거 */
     overflow-y: auto;
+    user-select: none;
 }
 
 h1,
